[PL] project info fixed overlap with project listing

--- a/foundations_ui/src/scss/views/project-page.scss
+++ b/foundations_ui/src/scss/views/project-page.scss
@@ -15,3 +15,7 @@
   position: fixed;
   width: 100%;
 }
+
+.project-page-container .header {
+  position: absolute;
+}
